feat(swagger): 集成Swagger3并迁移旧版注解 - 添加SwaggerConfig配置类，启用OpenAPI文档生成功能 - 新增HttpMethod常量类定义标准HTTP方法 - 迁移ResetPasswordController至auth包下并完善Swagger注解 - 新增UserInfoController用于获取用户信息并添加完整接口文档 - 为ConfigLoadingController、GitHubUserProviderController等补充Swagger描述 - 统一使用SecurityScheme注解配置Bearer Token认证方式 - 完善各接口的requestBody和response示例说明 - 修复部分控制器方法缺少method声明的问题 - 调整LoginController和BotAdminController的接口文档结构